--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Calculator</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -33,6 +33,7 @@
   </div>
 </div>
 
-<script src="/script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
+gitadd
